# ElainaBot-Onebot

./: .gitignore  LICENSE  PLUGIN_DEVELOPMENT.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
config/: connections.example.yaml  settings.example.yaml
core/: MessageEvent.py  PluginManager.py  application.py
core/base/: config.py  context.py  logger.py
core/module/: hook.py  manager.py
core/onebot/: adapter.py  api.py  client.py  connection.py  event.py
core/plugin/: __init__.py  _dispatch.py  _loader.py  _watcher.py  context.py  decorators.py  manager.py  web_pages.py
core/server/: http_server.py
core/services/: config_watcher.py
core/storage/: log.py
function/: httpx_pool.py  log_db.py
plugins/ai_dev/: agent.py  aiconfig.py  main.py  panel.html  store.py  tools.py  webpanel.py
plugins/ai_dev/app/: agent.py  aiconfig.py  store.py  tools.py  (+1 more)
plugins/astrbot/: main.py
plugins/example/: df.py.ban  example.py  main.py  packet.py.ban
tools/: astrbot_functional_test.py  astrbot_harness.py
web/: api.py  app.py  auth.py  setup.py  ws.py
web/templates/: index.html  login.html
web/tools/: __init__.py  _common.py  bot_restart.py  bots.py  config_handler.py  database.py  log_handler.py  log_query.py  logs.py  market.py  message_handler.py  messages.py  module_mgr.py  onebot_conn.py  plugin_manager.py  plugin_mgr.py  robot_info.py  sandbox_handler.py  session_manager.py  statistics.py  status_routes.py  system.py  system_info.py  update.py  update_handler.py
web/vue/: index.html  package-lock.json  package.json  vite.config.js
(+182 files in other folders)
